Inclusao de nova fonte, e melhoria na tela de listagem de produtos

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,8 +56,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
+  fonts:
+    - family: alexbrush
+      fonts: 
+        - asset: assets/fonts/alexbrushregular.ttf
   #     fonts:
   #       - asset: fonts/Schyler-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
