--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   cupertino_icons: ^0.1.2
   http: ^0.12.0+4
   scoped_model: ^1.0.1
+  shared_preferences: ^0.5.6+2
+  rxdart: ^0.23.1
 
 dev_dependencies:
   flutter_test:
