--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   scoped_model: ^1.0.1
   shared_preferences: ^0.5.6+2
   rxdart: ^0.23.1
+  map_view: ^0.0.14
 
 dev_dependencies:
   flutter_test:
